@@ -248,6 +248,10 @@
 #define MEDIA_STATUS_ACTIVE	0
 #define MEDIA_STATUS_DISABLED	1
 
+/* Action statuses */
+#define ACTION_STATUS_ACTIVE	0
+#define ACTION_STATUS_DISABLED	1
+
 /* Algorithms for service status calculation */
 #define SERVICE_ALGORITHM_NONE	0
 #define SERVICE_ALGORITHM_MAX	1
